samples/_failures_safe/1761075460_5307e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76d17938.c: In function ‘main’:
./samples/SAFE/__tmp_76d17938.c:157:5: error: expected expression at end of input
  157 |     if (!fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_76d17938.c:157:5: error: expected declaration or statement at end of input
